src/objects/Project_Ranging__c.object
<CustomObject>
    <description>Used to manage ranging of a product at an account level. This is typically managed by the Tech Sales team. The definition of product here means PMD project. Ranging is not at the product level.</description>
    <fields>
        <fullName>Account_Project_Combo__c</fullName>
        <description>Combination of account and project IDs to make the record unique. A workflow rule will combine the IDs and assign to this field</description>
        <label>Account Project Combo</label>
        <length>36</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Ranging</relationshipLabel>
        <relationshipName>Ranging</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CR_Jira_Link__c</fullName>
        <description>For links to Jira on any products in CR status</description>
        <label>CR Jira Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Other Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <formula>TEXT( Account__r.Country__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Has_Appearance_Sample__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Has the customer received an appearance sample of the product?</inlineHelpText>
        <label>Has Appearance Sample</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Working_Demo_Sample__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Has the customer received a working/demo sample of the product?</inlineHelpText>
        <label>Has Working/Demo Sample</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Key_Account__c</fullName>
        <description>Key Account</description>
        <formula>Account__r.Key_Account__r.Name</formula>
        <label>Key Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Next_Milestone_Date__c</fullName>
        <label>Next Milestone Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Step__c</fullName>
        <label>Next Step</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Overwrite_predecessor_project_with__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used to overwrite the default Predecessor_Project.</description>
        <inlineHelpText>Please use this field only if you want to overwrite the default Predecessor_Project. Select from the list and save.</inlineHelpText>
        <label>Overwrite predecessor project with</label>
        <referenceTo>PMD_Project__c</referenceTo>
        <relationshipLabel>Ranging (Overwrite predecessor project with)</relationshipLabel>
        <relationshipName>Ranging</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The person responsible for maintaining this ranging record status</inlineHelpText>
        <label>Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Ranging</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>POR_Status__c</fullName>
        <description>For Launch Manager to control whether Ranging / Account are in POR or CR.</description>
        <label>POR Status</label>
        <picklist>
            <picklistValues>
                <fullName>POR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CR Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CR Submitted</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>POR_Volume__c</fullName>
        <description>For Launch Manager to control POR volume commit.</description>
        <label>POR FCSQ Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pricing_Comments__c</fullName>
        <inlineHelpText>For documenting feedback from the customer around a product&apos;s pricing.</inlineHelpText>
        <label>Pricing Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Refers to Portfolio Management Database&apos;s (PMD) projects (a level above the products in the hierarchy)</inlineHelpText>
        <label>Project</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>PMD_Project__c.Project_Status__c</field>
                <operation>equals</operation>
                <value>Discovery, Active, On Hold, Shipping, End of Life</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>PMD_Project__c</referenceTo>
        <relationshipLabel>Ranging</relationshipLabel>
        <relationshipName>Project_Ranging</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RFQ_Date__c</fullName>
        <inlineHelpText>The customer requested quote date</inlineHelpText>
        <label>RFQ Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ranged_Date__c</fullName>
        <description>This field remains null until the status changes to &quot;Ranged&quot;. This field will be updated by a workflow rule.</description>
        <inlineHelpText>The date in which the status changed to &quot;Ranged&quot;</inlineHelpText>
        <label>Ranged Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ranging_Predecessor_Project__c</fullName>
        <formula>IF(ISBLANK( Overwrite_predecessor_project_with__c ), Project__r.Predecessor_Project__r.Name,   Overwrite_predecessor_project_with__r.Name )</formula>
        <label>Ranging Predecessor Project</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_for_Status__c</fullName>
        <inlineHelpText>Required for Not Pursued / Not Ranged status</inlineHelpText>
        <label>Reason for Status</label>
        <picklist>
            <controllingField>Status__c</controllingField>
            <picklistValues>
                <fullName>Product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Price</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Promotion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distribution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <formula>TEXT(Account__r.Region__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Specs_Comments__c</fullName>
        <inlineHelpText>For documenting feedback from the customer around a product&apos;s specifications.</inlineHelpText>
        <label>Specs Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status_Flag__c</fullName>
        <formula>IMAGE( 
CASE( Status__c, 
&quot;Low Probability&quot;, &quot;/img/samples/flag_red.gif&quot;,
&quot;Not pursued&quot;, &quot;/s.gif&quot;,
&quot;Rejected&quot;, &quot;/img/samples/flag_red.gif&quot;,
&quot;Mid Probability&quot;, &quot;/img/samples/flag_yellow.gif&quot;,
&quot;Ranged&quot;, &quot;/img/samples/flag_green.gif&quot;, 
&quot;High Probability&quot;, &quot;/img/samples/flag_green.gif&quot;,
&quot;Needs Input&quot;, &quot;/s.gif&quot;,
&quot;Not presented&quot;, &quot;/img/samples/flag_red.gif&quot;,
&quot;/s.gif&quot;), 
&quot;Status Flag&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not pursued</fullName>
                <color>#666666</color>
            </picklistValues>
            <picklistValues>
                <fullName>Needs Input</fullName>
                <color>#FFFFFF</color>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Not presented</fullName>
                <color>#CC66CC</color>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
                <color>#000000</color>
            </picklistValues>
            <picklistValues>
                <fullName>Low Probability</fullName>
                <color>#FF0000</color>
            </picklistValues>
            <picklistValues>
                <fullName>Mid Probability</fullName>
                <color>#FFFF66</color>
            </picklistValues>
            <picklistValues>
                <fullName>High Probability</fullName>
                <color>#33FF33</color>
            </picklistValues>
            <picklistValues>
                <fullName>Ranged</fullName>
                <color>#3366FF</color>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sub_Region__c</fullName>
        <formula>TEXT( Account__r.Sub_Region__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sub Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Timing_Comments__c</fullName>
        <inlineHelpText>For documenting feedback from the customer around a product&apos;s timing.</inlineHelpText>
        <label>Timing Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Volume_Commit__c</fullName>
        <inlineHelpText>Estimated/committed volume from the customer</inlineHelpText>
        <label>Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Ranging</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Key_Account__c</columns>
        <columns>Next_Milestone_Date__c</columns>
        <columns>Next_Step__c</columns>
        <columns>Owner__c</columns>
        <columns>Priority__c</columns>
        <columns>Project__c</columns>
        <columns>Ranged_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Status_Flag__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PR-{00000}</displayFormat>
        <label>PR #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ranging</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Next_Milestone_Date_Is_Required</fullName>
        <active>true</active>
        <description>Next milestone date is required for these statuses:
Not presented, Very low probability, Ranging in Progress</description>
        <errorConditionFormula>AND(ISBLANK(Next_Milestone_Date__c),
  OR(ISPICKVAL(Status__c, &apos;Not presented&apos;),
     ISPICKVAL(Status__c, &apos;Very low probability&apos;),
     ISPICKVAL(Status__c, &apos;Ranging in Progress&apos;)
    )
)</errorConditionFormula>
        <errorDisplayField>Next_Milestone_Date__c</errorDisplayField>
        <errorMessage>Next milestone date is required for these statuses:
Not presented, Very low probability, Ranging in Progress</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Next_Step_Is_Required</fullName>
        <active>true</active>
        <description>Next step is required for these statuses:
Not presented,  Very low probability, Ranging in Progress</description>
        <errorConditionFormula>AND(ISBLANK(Next_Step__c),
  OR(ISPICKVAL(Status__c, &apos;Not presented&apos;),
     ISPICKVAL(Status__c, &apos;Very low probability&apos;),
     ISPICKVAL(Status__c, &apos;Ranging in Progress&apos;)
    )
)</errorConditionFormula>
        <errorDisplayField>Next_Step__c</errorDisplayField>
        <errorMessage>Next step is required for these statuses:
Not presented,  Very low probability, Ranging in Progress</errorMessage>
    </validationRules>
</CustomObject>